--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
-  <link rel="stylesheet" href="./scss/style.css">
+  <link rel="stylesheet" href="./scss/styles.css">
 </head>
 <body>
-
-  <article class="article">
-    <h1 class="article__title">Title</h1>
-    <p class="article__author">Jimbo</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, commodi modi rem, quod quam cum rerum sequi ipsum quia reprehenderit, ducimus totam! Quidem reprehenderit ducimus delectus molestiae. Magnam, corporis nemo!</p>
-    <div>
-      <a href="#" class="">Read More</a>
+  <main class="container">
+    <h2>Hello world</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga molestiae et exercitationem facere quo accusamus animi minus explicabo velit, natus nihil hic magnam incidunt ipsam doloribus ducimus, dolores maxime nobis!</p>
+    <button class="button button--primary">Hi</button>
+    <a href="#" class="button button--secondary">xxx</a>
+    <br>
+    
+    <div class="card">
+      <img class="card__image" src="https://images.unsplash.com/photo-1534803973914-062f44d06ff9?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzMDAzMzh8MHwxfHNlYXJjaHwxMnx8dG9reW8lMjBuZW9uJTIwd29tYW58ZW58MHx8fHwxNjY5NjIzMTg5&ixlib=rb-4.0.3&q=80&w=1080" alt="Imagen">
+      <div class="card__content">
+        <h2 class="card__title">Título de la Card</h2>
+        <p class="card__text">Esta es una tarjeta de ejemplo usando SASS.</p>
+        <a href="#" class="card__button">Ver más</a>
+      </div>
     </div>
-    <div class="box">
-
-    </div>
-  </article>
-
-  <a class="btn-primary">Click</a>  
-  <a class="btn-secondary">Click</a>
-  <a href="#">Click</a>
+    
+  </main>
 </body>
 </html>
